fix: add overflow to section

--- a/src/scss/blocks/_sections.scss
+++ b/src/scss/blocks/_sections.scss
@@ -6,6 +6,8 @@
 	height: 100vh;
 
 	font-size: 1rem;
+
+	overflow: hidden;
 }
 
 .section--dark {
